fix product search box alignment

--- a/app/assets/stylesheets/overrides.less
+++ b/app/assets/stylesheets/overrides.less
@@ -11,6 +11,19 @@ body {
   font-family: 'Roboto', 'sans-serif';
 }
 
+.page-header.with_input {
+  padding-bottom: 6px;
+    .pull-right {
+    width: 50%;
+    display: inline-block;
+    .form-control {
+      &::-moz-placeholder {
+        font-weight: normal;
+      }
+    }
+  }
+}
+
 // Navbars
 // .navbar {
 //   margin-bottom: 0 !important;
